--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 167.88.61.213, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇯🇵 日本-1005.8KB/s(Youtube:不良林), server: 85.208.108.60, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.15MB/s(Youtube:不良林), server: 85.208.108.59, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.60, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.04MB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-1.34MB/s(Youtube:不良林), server: 85.208.108.59, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.98MB/s(Youtube:不良林), server: 85.208.108.59, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-422.3KB/s(Youtube:不良林), server: 85.208.108.60, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-201.8KB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-469.6KB/s(Youtube:不良林), server: 85.208.108.60, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-332.8KB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 85.208.108.59, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1005.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1005.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1005.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
@@ -66,19 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1005.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
@@ -88,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1005.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
@@ -104,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1005.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
@@ -129,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1005.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
