--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.34MB/s(Youtube:不良林), server: 85.208.108.59, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.98MB/s(Youtube:不良林), server: 85.208.108.59, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-422.3KB/s(Youtube:不良林), server: 85.208.108.60, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-201.8KB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-469.6KB/s(Youtube:不良林), server: 85.208.108.60, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.79MB/s(Youtube:不良林), server: 85.208.108.59, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 167.88.61.213, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-604.3KB/s(Youtube:不良林), server: 85.208.108.59, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-918.0KB/s(Youtube:不良林), server: 167.88.61.213, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 38.114.114.19, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-332.8KB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 85.208.108.59, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇺🇸 美国-822.9KB/s(Youtube:不良林), server: 38.68.134.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-201.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-852.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
