--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.79MB/s(Youtube:不良林), server: 85.208.108.59, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 167.88.61.213, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-604.3KB/s(Youtube:不良林), server: 85.208.108.59, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-918.0KB/s(Youtube:不良林), server: 167.88.61.213, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 38.114.114.19, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-570.7KB/s(Youtube:不良林), server: 85.208.108.60, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-422.3KB/s(Youtube:不良林), server: 85.208.108.60, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.11MB/s(Youtube:不良林), server: 85.208.108.59, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-975.8KB/s(Youtube:不良林), server: 85.208.108.60, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-627.0KB/s(Youtube:不良林), server: 85.208.108.59, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-332.8KB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 85.208.108.59, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-604.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
