--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-570.7KB/s(Youtube:不良林), server: 85.208.108.60, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.60, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇯🇵 日本-422.3KB/s(Youtube:不良林), server: 85.208.108.60, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.11MB/s(Youtube:不良林), server: 85.208.108.59, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-975.8KB/s(Youtube:不良林), server: 85.208.108.60, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-627.0KB/s(Youtube:不良林), server: 85.208.108.59, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-950.7KB/s(Youtube:不良林), server: 85.208.108.60, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 167.88.61.50, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-985.8KB/s(Youtube:不良林), server: 85.208.108.60, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-1.53MB/s(Youtube:不良林), server: 85.208.108.60, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇯🇵 日本-332.8KB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-1.01MB/s(Youtube:不良林), server: 85.208.108.59, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-822.9KB/s(Youtube:不良林), server: 38.68.134.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
       - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-950.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
       - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-950.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
       - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-950.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
       - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-950.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
       - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-950.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
       - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-950.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-570.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
       - 🇯🇵 日本-422.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-975.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-627.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-950.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-985.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-332.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1000.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-469.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
